deployments/navidrome/services.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: navidrome-service
  namespace: media
spec:
  type: ClusterIP
  ports:
  - port: 4533
    targetPort: 4533
  selector:
    app: navidrome
    part-of: navidrome
